--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
         <textarea name="prompt" rows="1" cols="1" placeholder="Olá. Me chamo Aurora🧠 e sou um modelo de IA treinado para predizer diagnóstico de alguns tipos de câncer. Também fui capaz de aprender muito com todo o conhecimento que a humanidade acumulou. Posso falar sobre diversos assuntos, mas me descobri Médica e amo oncologia! Vamos lá, me faça uma pergunta!..."></textarea>
         <button type="submit"><img src="assets/send.svg" alt="Enviar" />
       </form>
-      <a href="https://aurorav4.vercel.app"><button id="sair">SAIR DO CHAT</button></a>
+      <a href="https://aurora.tec.br"><button id="sair">SAIR DO CHAT</button></a>
     </div>
 
     <script type="module" src="script.js"></script>
